# ds570-term-project

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml
app/: streamlit_app.py
app/pages/: 1_Data_Explorer.py  2_Forecast.py  3_Model_Insights.py  4_Forecast_Charts.py  5_SHAP_Analysis.py
notebooks/: 2026-04-22-uk-01-eda-global.ipynb  2026-04-22-uk-02-eda-ca1-focused.ipynb  2026-05-04-ko-01-eda.ipynb  2026-05-04-uk-01-eda.ipynb  2026-05-11-uk-03-baseline-vs-lgbm.ipynb  2026-05-18-uk-04-tweedie-vs-gaussian.ipynb
scripts/: build_subset.py
src/retail_forecast/: cli.py  config.py  data.py  evaluate.py  features.py  forecast.py  pipeline.py  predict.py  tracker.py
src/retail_forecast/data/: __init__.py  fetch.py  load.py
src/retail_forecast/models/: __init__.py  baseline.py  lgbm.py
tests/: test_data.py  test_features.py  test_fetch.py  test_models.py  test_pipeline.py
