[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-forecast"
version = "0.1.0"
description = "End-to-end retail demand forecasting pipeline (DS570 final project)"
requires-python = ">=3.12"
readme = "README.md"
authors = [
    {name = "Umut Kaya", email = "umut.kaya2700@gmail.com"},
]

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "matplotlib>=3.9",
    "plotly>=5.20",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
]
notebooks = [
    "jupyterlab",
    "ipykernel",
    "ipywidgets",
]
app = [
    "streamlit>=1.35",
]

[project.scripts]
rf-train   = "retail_forecast.cli:train"
rf-predict = "retail_forecast.cli:predict"
rf-process = "retail_forecast.cli:process_data"

[tool.setuptools.packages.find]
where = ["src"]